--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
         <h1>Sugestions Finder:</h1>
           <form action="#" class="js-search-form">
           	<p></p>
-            <label for="query">Book, Movie, Show, or Book:</label>
+            <label for="query">Music, Movie, Show, or Book:</label>
             <input type="text" class="js-query">
             <button type="submit">Find Suggestions</button>
           </form>
           
           <h2>Results</h2>
-          <div class="js-search-results"></div>
+          <div class="js-results-start"></div>
+          <div class="js-results"></div>
       </main>
       <script src="index.js"></script>
     </body>
