clean up and documentation

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset='utf-8'>
         <meta name='viewport' content='width=device-width'>
-        <title>Sugestions Finder</title>
+        <title>Find Similar</title>
         <script
           src='https://code.jquery.com/jquery-3.2.1.min.js'
           integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='
           crossorigin='anonymous'></script>
         <link href='index.css' rel='stylesheet' type='text/css' />
-        <link href="https://fonts.googleapis.com/css?family=Oswald:500|Roboto|Material+Icons" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Oswald:500|Roboto|Material+Icons' rel='stylesheet'>
     </head>
     <body>
       <main>
@@ -17,20 +17,20 @@
           <h1>Find Similar</h1>
         </header>
         <section>
-          <form action="#'" class='js-search-form left_align'>
+          <form action='#'' class='js-search-form left_align'>
             <input type='text' class='js-query left_align' required>
-            <span class="floating-label">music, movie, show, book author, or game</span>
+            <span class='floating-label'>music, movie, show, book, author, or game</span>
             <button type='submit' class='button left_align'>Search</button>
-            <div class="dropdown left_align">
+            <div class='dropdown left_align'>
               <button type='button' class='js_filter_button button'>any</button>
-              <div id="myDropdown" class="js-filter-list dropdown-content">
-                <button type='button' class="js_dropBtn button" value='music'>music</button>
-                <button type='button' class="js_dropBtn button" value='movies'>movie</button>
-                <button type='button' class="js_dropBtn button" value='shows'>show</button>
-                <button type='button' class="js_dropBtn button" value='books'>book</button>
-                <button type='button' class="js_dropBtn button" value='authors'>author</button>
-                <button type='button' class="js_dropBtn button" value='games'>game</button>
-                <button type='button' class="js_dropBtn button" value='any'>any</button>
+              <div id='myDropdown' class='js-filter-list dropdown-content'>
+                <button type='button' class='js_dropBtn button' value='music'>music</button>
+                <button type='button' class='js_dropBtn button' value='movies'>movie</button>
+                <button type='button' class='js_dropBtn button' value='shows'>show</button>
+                <button type='button' class='js_dropBtn button' value='books'>book</button>
+                <button type='button' class='js_dropBtn button' value='authors'>author</button>
+                <button type='button' class='js_dropBtn button' value='games'>game</button>
+                <button type='button' class='js_dropBtn button' value='any'>any</button>
               </div>
             </div>
           </form>
